--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@ton/core": "^0.52.2",
     "@ton/crypto": "^3.2.0",
     "@ton/ton": "^13.7.0",
     "@twa-dev/sdk": "^6.9.0",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
-    "@zcloak/crypto": "^2.0.0",
-    "buffer": "^6.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
@@ -27,10 +26,14 @@
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "@vitejs/plugin-react": "^4.1.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.51.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
-    "vite": "^4.4.11"
+    "vite": "^4.4.11",
+    "vite-plugin-node-polyfills": "^0.15.0"
   }
 }
