--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "uniqolor": "^1.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.30",
